testing heroku update

--- a/records/templates/records/index.html
+++ b/records/templates/records/index.html
@@ -8,5 +8,6 @@
     <li>Lateralus</li>
     <li>Undertow</li>
     <li>An Introduction to Rock and Roll</li>
+    <li>Doris</li>
   </ul>
 {% endblock %}
