--- a/records/templates/records/index.html
+++ b/records/templates/records/index.html
@@ -3,11 +3,9 @@
 
 {% block content %}
   <ul>
-    <li>Opiate</li>
-    <li>Best Buds</li>
-    <li>Lateralus</li>
-    <li>Undertow</li>
-    <li>An Introduction to Rock and Roll</li>
-    <li>Doris</li>
+    {% for records in record_list %}
+    <li>{{records.name}}</li>
+    {% endfor %}
   </ul>
+  <a href="{% url 'records:create' %}"<p>Add a record</p></a>
 {% endblock %}
