--- a/records/templates/records/index.html
+++ b/records/templates/records/index.html
@@ -2,10 +2,16 @@
 {% load static %}
 
 {% block content %}
+
   <ul>
+    <div class="jumbotron">
     {% for records in record_list %}
     <li>{{records.name}}</li>
+    <li>{{records.price}}</li>
+    <li>{{records.is_available}}</li>
+    <li>{{records.condition}}</li>
     {% endfor %}
+    </div>
   </ul>
   <a href="{% url 'records:create' %}"<p>Add a record</p></a>
 {% endblock %}
