--- a/records/templates/records/index.html
+++ b/records/templates/records/index.html
@@ -27,7 +27,7 @@
         {% ifequal records.condition 'HEAVILY' %}
           <p>Heavily Used</p>
         {% endifequal %}
-
+        <a href="{% url 'records:delete'  records.id %}"<p>Remove this record</p></a>
       </li>
     </div>
     {% endfor %}
