--- a/records/templates/records/index.html
+++ b/records/templates/records/index.html
@@ -3,6 +3,7 @@
 
 {% block content %}
   <h1>My Records</h1>
+  <h1> Welcome {{request.user.username}}</h1>
   <a href="{% url 'records:create' %}"<p>Add a record</p></a>
   <ul>
     {% for records in record_list %}
