--- a/records/templates/records/index.html
+++ b/records/templates/records/index.html
@@ -2,36 +2,12 @@
 {% load static %}
 
 {% block content %}
-  <h1>My Records</h1>
+  <h1>Home Page</h1>
   <h1> Welcome {{request.user.username}}</h1>
-  <a href="{% url 'records:create' %}"<p>Add a record</p></a>
+  <a href="{% url 'records:create' %}"><p>Add a record</p></a>
   <ul>
-    {% for records in record_list %}
-    <div class="jumbotron">
-      <li>
-        <p>Record Name: {{records.name}}</p>
-        <p>${{records.price}} per week</p>
-        {% ifequal records.is_available True %}
-          <p>This vinyl is available</p>
-        {% endifequal %}
-        {% ifequal records.is_available False %}
-          <p>This vinyl is not available</p>
-        {% endifequal %}
-        {% ifequal records.condition 'MINT' %}
-          <p>Mint Condition</p>
-        {% endifequal %}
-        {% ifequal records.condition 'LIGHTLY' %}
-          <p>Lightly Used</p>
-        {% endifequal %}
-        {% ifequal records.condition 'AVERAGE' %}
-          <p>Average Condition</p>
-        {% endifequal %}
-        {% ifequal records.condition 'HEAVILY' %}
-          <p>Heavily Used</p>
-        {% endifequal %}
-        <a href="{% url 'records:delete'  records.id %}"<p>Remove this record</p></a>
-      </li>
-    </div>
-    {% endfor %}
+    <a href="{% url 'accounts:signup'}"<li>Create new account</li></a>
+    <li>Logout</li>
+    <a href="{% url 'records:my' %}"><li>View my records</li></a>
   </ul>
 {% endblock %}
