can link to all user page

--- a/records/templates/records/index.html
+++ b/records/templates/records/index.html
@@ -9,5 +9,6 @@
     <a href="{% url 'accounts:signup'}"<li>Create new account</li></a>
     <li>Logout</li>
     <a href="{% url 'records:my' %}"><li>View my records</li></a>
+    <a href="{% url 'records:user_list' %}"><li>View all users</li></a>
   </ul>
 {% endblock %}
