create account button works

--- a/records/templates/records/index.html
+++ b/records/templates/records/index.html
@@ -6,8 +6,8 @@
   <h1> Welcome {{request.user.username}}</h1>
   <a href="{% url 'records:create' %}"><p>Add a record</p></a>
   <ul>
-    <a href="{% url 'accounts:signup'}"<li>Create new account</li></a>
-    <li>Logout</li>
+    <a href="{% url 'accounts:signup' %}"<li>Create new account</li></a>
+    <a href="{% url 'logout' %}"><li>Logout</li></a>
     <a href="{% url 'records:my' %}"><li>View my records</li></a>
     <a href="{% url 'records:user_list' %}"><li>View all users</li></a>
   </ul>
