login logout and create links work

--- a/records/templates/records/index.html
+++ b/records/templates/records/index.html
@@ -8,6 +8,7 @@
   <ul>
     <a href="{% url 'accounts:signup' %}"<li>Create new account</li></a>
     <a href="{% url 'accounts:login' %}"<li>Login</li></a>
+    <a href="{% url 'accounts:login' %}"<li>Logout</li></a>
     <a href="{% url 'records:my' %}"><li>View my records</li></a>
     <a href="{% url 'records:user_list' %}"><li>View all users</li></a>
   </ul>
