got to add records userspecific

--- a/records/templates/records/index.html
+++ b/records/templates/records/index.html
@@ -6,9 +6,9 @@
   <h1> Welcome {{request.user.username}}</h1>
   <a href="{% url 'records:create' %}"><p>Add a record</p></a>
   <ul>
-    <a href="{% url 'accounts:signup' %}"<li>Create new account</li></a>
-    <a href="{% url 'accounts:login' %}"<li>Login</li></a>
-    <a href="{% url 'accounts:login' %}"<li>Logout</li></a>
+    <a href="{% url 'accounts:signup' %}"><li>Create new account</li></a>
+    <a href="{% url 'accounts:login' %}"><li>Login</li></a>
+    <a href="{% url 'accounts:login' %}"><li>Logout</li></a>
     <a href="{% url 'records:my' %}"><li>View my records</li></a>
     <a href="{% url 'records:user_list' %}"><li>View all users</li></a>
   </ul>
