got a page of all records with available buttons

--- a/records/templates/records/index.html
+++ b/records/templates/records/index.html
@@ -8,7 +8,7 @@
   <ul class="list-group">
     <a href="{% url 'records:create' %}"><li class="list-group-item">Add a record</li></a>
     <a href="{% url 'records:my' %}"><li class="list-group-item">View my records</li></a>
-    <a href="{% url 'records:user_list' %}"><li class="list-group-item">View all users</li></a>
+    <a href="{% url 'records:user_list' %}"><li class="list-group-item">View all records</li></a>
   </ul>
 </div>
 {% endblock %}
