--- a/records/templates/records/base.html
+++ b/records/templates/records/base.html
@@ -11,7 +11,7 @@
     <header>
       <div class="row">
         <div class="col-xs-6">
-          <h1>RecordShare</h1>
+          <h1><a href="{% url 'records:index' %}" class="logo">RecordShare</a></h1>
         </div>
         <div class="col-xs-6">
           <ul class="nav nav-pills">
